--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <HTML>
 <HEAD>
-  <TITLE>Edwin MAF</TITLE>
+  <TITLE>MAF Served Airports - Leaflet</TITLE>
   <link rel="stylesheet" href="/css/leaflet.css" />
   <link rel="stylesheet" href="/css/maf-map.css" />
 </HEAD>
 <BODY>
 <div id="map"></div>
+<!-- <script>L_PREFER_CANVAS = true;</script> -->
 <script src="/js/leaflet.js"></script>
 <script src="/js/leaflet.ajax.min.js"></script>
 <script src="/js/maf-map.js"></script>
