Show runway length and MAF bases

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="/css/maf-map.css" />
 </HEAD>
 <BODY>
+<FORM>
+	<INPUT TYPE="HIDDEN" name="has_long_runway" value="true">
+</FORM>
 <div id="map"></div>
 <!-- <script>L_PREFER_CANVAS = true;</script> -->
 <script src="/js/leaflet.js"></script>
