Made paths referential
Changed path on links and scripts so that it can be used in any subdirectory.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <HTML>
 <HEAD>
   <TITLE>MAF Served Airports - Leaflet</TITLE>
-  <link rel="stylesheet" href="/css/leaflet.css" />
-  <link rel="stylesheet" href="/css/maf-map.css" />
+  <link rel="stylesheet" href="./css/leaflet.css" />
+  <link rel="stylesheet" href="./css/maf-map.css" />
 </HEAD>
 <BODY>
 <FORM>
@@ -10,8 +10,8 @@
 </FORM>
 <div id="map"></div>
 <!-- <script>L_PREFER_CANVAS = true;</script> -->
-<script src="/js/leaflet.js"></script>
-<script src="/js/leaflet.ajax.min.js"></script>
-<script src="/js/maf-map.js"></script>
+<script src="./js/leaflet.js"></script>
+<script src="./js/leaflet.ajax.min.js"></script>
+<script src="./js/maf-map.js"></script>
 </BODY>
 </HTML>
